--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
-    "axios": "^1.8.1",
+    "@ts-morph/common": "^0.26.1",
+    "axios": "^1.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.6"
+    "tailwindcss": "^4.0.6",
+    "ts-morph": "^25.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/three": "^0.174.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
